tests/invalid_typecheck/test_tc_assign_int_to_bool.aphi
/*
Type-check error: Cannot assign int expression to bool variable.
Assigns '42' (int) to variable 'flag' (bool).
*/

bool flag;

procedure main {
    flag = 42;
}
